[package]
name = "enum_companion"
version = "0.1.2"
edition = "2024"
description = "A procedural macro for generating companion enums for structs."
license = "MIT"
repository = "https://github.com/solidev/enum_companion"
readme = "README.md"
keywords = ["enum", "macro", "reflection", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[dependencies]
enum_companion_derive = { path = "../enum_companion_derive", version = "0.1.2" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }
