[package]
name = "enum_companion_derive"
version = "0.1.2"
edition = "2024"
description = "A procedural macro for generating companion enums for structs."
license = "MIT"
repository = "https://github.com/solidev/enum_companion"
readme = "README.md"
keywords = ["enum", "macro", "reflection", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["visit"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20.11"

[dev-dependencies]
uuid = { version = "1.17.0", features = ["v4"] }
